scripts/nullness/annotator/urlc58b5c5b73_emiliano_fiuba_2013_2c_7510_tgz-pJ8-test_java_FrameworkTestsJ8.txt
../annotator/urlc58b5c5b73_emiliano_fiuba_2013_2c_7510_tgz-pJ8-test_java_FrameworkTestsJ8/src/main/java/Test.java:39: error: [return] incompatible types in return.
		return result;
		       ^
  type of expression: @Initialized @Nullable TestResult
  method return type: @Initialized @NonNull TestResult
1 error
